# openbot

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPROVEMENTS.md  PARSER_GAPS.md  README.md  TODO.md  VAPI_INTEGRATION.md  alembic.ini  app.db  db_menu_export.py  docker-compose.yml  export_menu_for_populate.py  init-databases.sql  launch_server.cmd  migrate_to_neon.py  migrate_to_postgres.py  populate_omelette_modifiers.py  populate_zuckers_menu.py  pyproject.toml  query_menu_items.py  requirements.txt  run_all_tenants.py  run_tenant.py  setup_zuckers.py  start_sammy.cmd  start_tony.cmd  start_zuckers.cmd  tenants.json  test_menu_items_extended.py  test_menu_items_round2.py  test_model.py  test_orders.md  update_zuckers_menu.py
.claude/: settings.local.json
alembic/: env.py
deploy/: README.md  apprunner-service.json  ecr-push.bat  ecr-push.sh  orderbot-deployment-policy.json  vapi-setup-instructions.md
docs/: bagel_bot_architecture.md  data-driven-action-plan.md  data-driven-roadmap.md  flow-hardening-brainstorm.md  future-question-handling.md  handler_consolidation_todo.md  hierarchical-task-architecture.md  lexington-ingredients-analysis.md  manual-test-cases.md  menu-config-schema-design.md  menu_discrepancy_report.md  menu_rationalization_todos.md  refactor-plan-unified-message-processing.md  slot-orchestrator-migration.md  testing-options.md
sandwich_bot/: __init__.py  address_service.py  app.db  app_factory.py  auth.py  config.py  db.py  email_service.py  init_db.py  inventory.py  item_type_service.py  llm_client.py  main.py  sms.py  (+15 more)
(+395 files in other folders)
