[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sandwich-bot"
version = "0.1.3"
description = "Multi-tenant restaurant ordering chatbot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.17.0",
    "fastapi>=0.123.0",
    "openai>=2.9.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
    "SQLAlchemy>=2.0.0",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sandwich_bot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
